# tn-nt-discordbot-cogs

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: automated-checks.yml  release.yml
testauth/settings/: local.py
tnnt_discordbot_cogs/: __init__.py  admin.py  apps.py  auth_hooks.py  helper.py  providers.py
tnnt_discordbot_cogs/cogs/: about.py  admin.py  auth.py  locate.py  lookup.py  members.py  models.py  price_check.py  recruit_me.py  time.py  timers.py  welcome.py
tnnt_discordbot_cogs/locale/: django.pot
tnnt_discordbot_cogs/locale/cs_CZ/LC_MESSAGES/: django.po
tnnt_discordbot_cogs/locale/de/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/es/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/it_IT/LC_MESSAGES/: django.po
tnnt_discordbot_cogs/locale/ja/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/nl_NL/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/pl_PL/LC_MESSAGES/: django.po
tnnt_discordbot_cogs/locale/ru/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/sk/LC_MESSAGES/: django.po
tnnt_discordbot_cogs/locale/uk/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
tnnt_discordbot_cogs/migrations/: 0001_initial.py  0002_setting_lookup_channels.py  0003_setting_locate_channels.py  0004_permission.py
tnnt_discordbot_cogs/models/: __init__.py  permission.py  setting.py
tnnt_discordbot_cogs/providers/: applogger.py  esi_client.py  esi_handler.py
tnnt_discordbot_cogs/tests/: __init__.py  test_auth_hooks.py  test_cog_about.py  test_cog_admin.py  test_cog_auth.py  test_cog_locate.py  test_cog_lookup.py  test_cog_models.py  test_cog_price_check.py  test_cog_recruit_me.py  test_cog_welcome.py  test_helper.py  test_model_setting.py
