[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "tnnt-discordbot-cogs"
description = "TN-NT customized cogs for aa-discordbot"
readme = "README.md"
keywords = [
    "allianceauth",
    "discord",
    "eveonline",
    "terra_nanotech",
]
license = {file = "LICENSE"}
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth<5.0.0,>=3",
    "allianceauth-app-utils>=1.14.1",
    "allianceauth-discordbot",
    "django-eveuniverse>=1.3",
]
[project.urls]
Changelog = "https://github.com/terra-nanotech/tn-nt-discordbot-cogs/blob/master/CHANGELOG.md"
Documentation = "https://github.com/terra-nanotech/tn-nt-discordbot-cogs/blob/master/README.md"
Homepage = "https://github.com/terra-nanotech/tn-nt-discordbot-cogs"
Source = "https://github.com/terra-nanotech/tn-nt-discordbot-cogs.git"
Tracker = "https://github.com/terra-nanotech/tn-nt-discordbot-cogs/issues"

[tool.hatch.build]
include = [
    "/tnnt_discordbot_cogs",
]

[tool.hatch.version]
path = "tnnt_discordbot_cogs/__init__.py"
